--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,8 @@
     {
       "src": "screenshot1.png",
       "type": "image/png",
-      "sizes": "540x720"
+      "sizes": "540x720",
+      "form_factor": "narrow" s
     }
   ]
 }
